refactor repo bc gross

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 *.bk
 *.swp
 *.pyc
-__pycache__/*
-posts/*
-posts_md/*
-pages/*
-pages_md/*
-ethics/*
-ethics_md/*
+*__pycache__/*
+bashfulbytes.com/posts/*
+*posts_md/*
+*pages/*
+*pages_md/*
+*ethics/*
+*ethics_md/*
 *.html
 *.xml
 *.asc
 *.swo
 *.m4a
-hidden/*
+*hidden/*
