--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 *.bk
 *.swp
 *.pyc
-*__pycache__/*
-bashfulbytes.com/posts/*
-*posts_md/*
-*pages/*
-*pages_md/*
-*ethics/*
-*ethics_md/*
+*__pycache__
+bashfulbytes.com/posts
+bashfulbytes.com/posts_md
+bashfulbytes.com/pages
+bashfulbytes.com/pages_md
+bashfulbytes.com/ethics
+bashfulbytes.com/ethics_md
 *.html
 *.xml
 *.asc
 *.swo
 *.m4a
-*hidden/*
+bashfulbytes.com/hidden
